--- a/public/css/style.css
+++ b/public/css/style.css
@@ -929,10 +929,10 @@ div.custom-nav>ul>li.sbmenu:hover>a:after {
     display: grid;
 }
 
-.megamenu ul li a:hover {
+/* .megamenu ul li a:hover {
     background: #bdeaf5;
     padding: 20px;
-}
+} */
 
 .group-dark {
     background-color: #f3f6f9;
@@ -1367,6 +1367,7 @@ video {
     border-radius: 8px;
     -webkit-box-shadow: 0 3.4px 2.7px -30px rgb(0 0 0 / 6%), 0 8.2px 8.9px -30px rgb(0 0 0 / 7%), 0 25px 40px -30px rgb(0 0 0 / 20%);
     box-shadow: 0 3.4px 2.7px -30px rgb(0 0 0 / 6%), 0 8.2px 8.9px -30px rgb(0 0 0 / 7%), 0 25px 40px -30px rgb(0 0 0 / 20%);
+    height: 100%;
 }
 
 .quote {
@@ -4694,12 +4695,17 @@ blockquote {
 .clients-logos ul li {
     display: inline-block;
     padding: 30px 0 0 0;
+    
 }
 
 .brand-logo {
     max-width: 180px;
-    margin: 0 auto;
+    margin: 0px auto;
     padding: 10px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    height: 100%;
+    align-items: center;
+    display: grid;
 }
 
 .video-review {
@@ -5723,6 +5729,7 @@ h3 a {
     margin-top: 30px;
     display: flex;
     align-items: center;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .hoshd:hover {
@@ -5828,7 +5835,7 @@ h3 a {
     background: #fbfbfb;
 }
 
-.sctxt {
+/* .sctxt {
     font-size: 90px;
     position: absolute;
     right: 0;
@@ -5839,6 +5846,14 @@ h3 a {
     text-transform: uppercase;
     -webkit-text-stroke: 1px #e8e8e8;
     -webkit-text-fill-color: white;
+} */
+
+.sctxt {
+    font-size: 90px;
+    top: 0;
+    font-weight: 900;
+    -webkit-text-stroke: 1px #e8e8e8;
+    -webkit-text-fill-color: #fff
 }
 
 
@@ -6910,13 +6925,13 @@ html .pb140 {
 
 .bg-btn {
     /* background: #ffbd84;
-background: -moz-linear-gradient(left, #ffbd84 0%, #ec2b19 100%);
-background: -webkit-linear-gradient(left, #ffbd84 0%,#ec2b19 100%);
-background: linear-gradient(to right, #ffbd84 0%,#ec2b19 100%); */
+    background: -moz-linear-gradient(left, #ffbd84 0%, #ec2b19 100%);
+    background: -webkit-linear-gradient(left, #ffbd84 0%,#ec2b19 100%);
+    background: linear-gradient(to right, #ffbd84 0%,#ec2b19 100%); */
     background-color: #ef4e21;
     background: linear-gradient(to right, #29368a, #2dbddf);
-    -webkit-box-shadow: 0 10px 15px 0px rgba(175, 0, 87, 0.2);
-    box-shadow: 0 10px 15px 0px rgba(175, 0, 87, 0.2);
+    -webkit-box-shadow: 0 10px 15px 0px rgba(236, 43, 25, 0.2);
+    box-shadow: 0 10px 15px 0px rgba(236, 43, 25, 0.2);
 }
 
 .bg-btn1 {
@@ -8912,8 +8927,8 @@ html .mt15 {
 
 .connect-block a {
     border-radius: 8px;
-    background: #ffdbdb;
-    border: 1px solid rgb(255 195 195);
+    background: transparent;
+    border: 1px solid #ec2b19;
     padding: 20px;
     display: flex;
 }
@@ -9328,4 +9343,23 @@ html .mt15 {
     background-attachment: fixed;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+.testimonials-section-app .card {
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border: 1px solid var(--white-color);
+}
+
+.owl-carousel .owl-dots .owl-dot {
+    background: transparent;
+}
+
+.owl-carousel .owl-dots .owl-dot.active {
+    /* background: #1089ff; */
+    background: transparent;
+}
+
+.career .card {
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    border: 1px solid var(--white-color);
 }
