--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9397,7 +9397,7 @@ html .mt15 {
 }
 
 .slider {
-    background: red;
+    background: transparent;
     box-shadow: 0 10px 20px -5px rgba(0, 0, 0, .125);
     height: 100px;
     margin: auto;
